@@ -21,78 +21,84 @@ public class DataInitializer implements CommandLineRunner {
     private final UsuarioRepository usuarioRepository;
     private final QuizRepository quizRepository;
     private final PasswordEncoder passwordEncoder;
-    private final ConquistaRepository conquistaRepository; // ADICIONADO
+    private final ConquistaRepository conquistaRepository;
 
     public DataInitializer(UsuarioRepository usuarioRepository, QuizRepository quizRepository,
-                           PasswordEncoder passwordEncoder, ConquistaRepository conquistaRepository) { // ADICIONADO
+                           PasswordEncoder passwordEncoder, ConquistaRepository conquistaRepository) {
         this.usuarioRepository = usuarioRepository;
         this.quizRepository = quizRepository;
         this.passwordEncoder = passwordEncoder;
-        this.conquistaRepository = conquistaRepository; // ADICIONADO
+        this.conquistaRepository = conquistaRepository;
     }
 
     @Override
     @Transactional
     public void run(String... args) throws Exception {
-        // ... (código existente para criar utilizador e quizzes)
+        if (usuarioRepository.findByEmail("admin@admin.com").isEmpty()) {
+            Usuario admin = UsuarioFactory.createUsuario(
+                    "Admin", "admin@admin.com",
+                    passwordEncoder.encode("admin123"), TipoUsuario.PROFESSOR);
+            usuarioRepository.save(admin);
+            System.out.println(">>> Utilizador admin de teste criado com sucesso!");
+        }
 
-        // ADICIONADO: Cria conquistas de exemplo se não existirem
+        if (quizRepository.count() == 0) {
+            criarQuizzesDeExemplo();
+            System.out.println(">>> Quizzes de exemplo criados com sucesso!");
+        }
+
+        // ADICIONADO: Lógica para criar a hierarquia de conquistas
         if (conquistaRepository.count() == 0) {
-            criarConquistasIniciais();
-            System.out.println(">>> Conquistas de exemplo criadas com sucesso!");
+            criarEstruturaDeConquistas();
+            System.out.println(">>> Estrutura de conquistas (Composite) criada com sucesso!");
         }
     }
 
-    // ... (métodos existentes criarQuizDeGeografia e criarQuizDeHistoria)
-
-    /**
-     * Cria um conjunto de conquistas iniciais na base de dados.
-     */
-    private void criarConquistasIniciais() {
-        Conquista primeiraConquista = new Conquista(
-                "Iniciante Curioso",
-                "Completou o seu primeiro quiz!",
-                "🏅"
-        );
-        conquistaRepository.save(primeiraConquista);
-
-        Conquista mestreGeografia = new Conquista(
-                "Mestre em Geografia",
-                "Completou um quiz na categoria de Geografia.",
-                "🌍"
-        );
-        conquistaRepository.save(mestreGeografia);
-
-         Conquista historiador = new Conquista(
+    private void criarEstruturaDeConquistas() {
+        // 1. Cria as conquistas simples (as "folhas")
+        ConquistaSimples historiador = new ConquistaSimples(
                 "Historiador Nato",
                 "Completou um quiz na categoria de História.",
                 "📜"
         );
-        conquistaRepository.save(historiador);
+
+        ConquistaSimples mestreGeografia = new ConquistaSimples(
+                "Mestre em Geografia",
+                "Completou um quiz na categoria de Geografia.",
+                "🌍"
+        );
+
+        // 2. Cria a conquista composta (o "grupo")
+        GrupoDeConquistas mestreHumanas = new GrupoDeConquistas(
+                "Mestre de Humanas",
+                "Dominou as áreas de História e Geografia.",
+                "🏛️"
+        );
+
+        // 3. Adiciona as conquistas simples ao grupo usando o método do padrão Composite
+        mestreHumanas.adicionar(historiador);
+        mestreHumanas.adicionar(mestreGeografia);
+
+        // 4. Salva o grupo (o cascade irá salvar as conquistas simples associadas)
+        conquistaRepository.save(mestreHumanas);
     }
     
-    // Métodos existentes para criar quizzes (não precisam de ser alterados)
-    private void criarQuizDeGeografia() {
+    // Agrupado para melhor organização
+    private void criarQuizzesDeExemplo() {
+        // Quiz de Geografia
         Quiz quizGeografia = new Quiz("Capitais da Europa", "Teste os seus conhecimentos sobre as capitais europeias.", "Geografia");
-        Pergunta p1 = new Pergunta("Qual é a capital da França?");
-        p1.setRespostas(new HashSet<>(Arrays.asList(
-                new Resposta("Paris", true), new Resposta("Londres", false),
-                new Resposta("Berlim", false), new Resposta("Madrid", false) )));
-        Pergunta p2 = new Pergunta("Qual é a capital da Itália?");
-        p2.setRespostas(new HashSet<>(Arrays.asList(
-                new Resposta("Veneza", false), new Resposta("Roma", true),
-                new Resposta("Milão", false), new Resposta("Florença", false) )));
-        quizGeografia.setPerguntas(new HashSet<>(Arrays.asList(p1, p2)));
+        Pergunta p1Geo = new Pergunta("Qual é a capital da França?");
+        p1Geo.setRespostas(new HashSet<>(Arrays.asList(new Resposta("Paris", true), new Resposta("Londres", false))));
+        quizGeografia.getPerguntas().add(p1Geo);
+        p1Geo.setQuiz(quizGeografia);
         quizRepository.save(quizGeografia);
-    }
 
-    private void criarQuizDeHistoria() {
+        // Quiz de História
         Quiz quizHistoria = new Quiz("Revolução Francesa", "Perguntas sobre um dos eventos mais marcantes da história.", "História");
-        Pergunta p1 = new Pergunta("Em que ano começou a Revolução Francesa?");
-        p1.setRespostas(new HashSet<>(Arrays.asList(
-                new Resposta("1789", true), new Resposta("1815", false),
-                new Resposta("1799", false), new Resposta("1776", false) )));
-        quizHistoria.setPerguntas(Set.of(p1));
+        Pergunta p1Hist = new Pergunta("Em que ano começou a Revolução Francesa?");
+        p1Hist.setRespostas(new HashSet<>(Arrays.asList(new Resposta("1789", true), new Resposta("1815", false))));
+        quizHistoria.getPerguntas().add(p1Hist);
+        p1Hist.setQuiz(quizHistoria);
         quizRepository.save(quizHistoria);
     }
 }
